# SharePoint-Sync-Speedup

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  sharepointspeedup.ps1
docs/: INTUNE_DEPLOYMENT.md
src/: main.cpp
